[package]
name = "chainx-sync-parse"
version = "1.0.6"
authors = ["ChainX <https://chainx.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log4rs = "0.8"
failure = { version = "0.1", features = ["derive"] }
structopt = "0.3"
hex = "0.3"
lazy_static = "1.4"
byteorder = "1.3"
parity-codec = { version = "3.5", features = ["derive"] }
parking_lot = "0.9"
reqwest = "0.9"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.16", features = ["derive"] }
jsonrpc-core = "14"
jsonrpc-derive = "14"
jsonrpc-http-server = "14"

# Substrate (the versoin used by ChainX)
sr-primitives = { git = "https://github.com/chainpool/substrate", rev = "2e3bb962" }
substrate-primitives = { git = "https://github.com/chainpool/substrate", rev = "2e3bb962" }
# bitcoin (the latest version of master branch of light-bitcoin)
btc-chain = { package = "chain", git = "https://github.com/chainx-org/light-bitcoin" }
btc-keys = { package = "keys", git = "https://github.com/chainx-org/light-bitcoin" }

# For 'sync-log' feature
regex = { version = "1.3", optional = true }

[dev-dependencies]
hyper = "0.12"

[features]
default = ["std", "sync-log"]
std = []
sync-log = ["regex"]
