[package]
name = "chainx-sync-parse"
version = "1.1.0"
authors = ["ChainX <https://chainx.org>"]
edition = "2018"
build = "build.rs"
description = "Synchronize and parse ChainX sync data"

[dependencies]
byteorder = "1.3"
hex = "0.4"
lazy_static = "1.4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
log4rs = "0.12"
jsonrpc-core = "14"
jsonrpc-derive = "14"
jsonrpc-http-server = "14"
parity-codec = { version = "3.5", features = ["derive"] }
parking_lot = "0.10"
reqwest = { version = "0.10", features = ["blocking", "json"] }
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
strum = { version = "0.18", features = ["derive"] }
thiserror = "1.0"

# Substrate primitive types (the versoin used by ChainX)
primitive-types = { version = "0.3", features = ["serde"] } # use parity-codec v3.x
blake2-rfc = "0.2.18"
bs58 = "0.3"
# bitcoin (the latest version of master branch of light-bitcoin)
btc-chain = { package = "chain", git = "https://github.com/chainx-org/light-bitcoin" }
btc-keys = { package = "keys", git = "https://github.com/chainx-org/light-bitcoin" }

# For 'sync-log' feature
regex = { version = "1.3", optional = true }

[dev-dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }

[features]
default = ["std", "sync-log"]
std = []
sync-log = ["regex"]
